kubernetes/ingress.yml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "template-ingress"
  namespace: "template"
spec:
  rules:
    - host: "template.example.com"
      http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
              service:
                name: "template-service"
                port:
                  number: 80
...
